# Right_Round

./: .gitignore  BUGFIX_CHANGELOG.md  README.md  design.md
DM2Delay/: CMakeLists.txt
DM2Delay/Source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
DM2Delay/Source/DSP/: BBDModel.cpp  BBDModel.h  Compander.cpp  Compander.h  DelayLine.cpp  DelayLine.h  Filter.cpp  Filter.h  MixStage.cpp  MixStage.h
